替换到七牛js
替换到七牛js

--- a/fire/myFire.html
+++ b/fire/myFire.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,8 +9,8 @@
         }
     </style>
     <script src="http://www.lanrenzhijia.com/ajaxjs/2.0.0/jquery-2.0.0.min.js"></script>
-    <script src="../js/sea.js"></script>
-     <script src="./Fire.js"></script>
+    <script src="http://ob4uot9cp.bkt.clouddn.com/sea.js"></script>
+     <script src="http://ob4uot9cp.bkt.clouddn.com/Fire.js"></script>
 </head>
 <body>
 
