--- a/fire/myFire.html
+++ b/fire/myFire.html
@@ -8,7 +8,7 @@
             background-color: black;
         }
     </style>
-    <script src="http://www.lanrenzhijia.com/ajaxjs/2.0.0/jquery-2.0.0.min.js"></script>
+    <script src="http://ob4uot9cp.bkt.clouddn.com/jquery-2.0.0.min.js"></script>
     <script src="http://ob4uot9cp.bkt.clouddn.com/sea.js"></script>
      <script src="http://ob4uot9cp.bkt.clouddn.com/Fire.js"></script>
 </head>
