--- a/fire/myFire.html
+++ b/fire/myFire.html
@@ -18,8 +18,9 @@
 
 </body>
 <script type="text/javascript">
+alert(3);
     seajs.use("fire",function(fire){
-        var t=new fire();
+        var t=new fire();alert(4);
     });
 
     /*
